test/tests/stages/18_structures/invalid_types/incompatible_types/compare_different_struct_pointers.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[5]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s1
        Bool: 0
        List[0]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s2
        Bool: 0
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_s1_ptr
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Structure: 
              TIdentifier: s1
              Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: get_s2_ptr
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Pointer: 
            Structure: 
              TIdentifier: s2
              Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: s1_ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: get_s1_ptr
                      List[0]: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: s1
                      Bool: 0
                  None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: s2_ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: get_s2_ptr
                      List[0]: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: s2
                      Bool: 0
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CVar: 
                    TIdentifier: s1_ptr
                    None: 
                  CVar: 
                    TIdentifier: s2_ptr
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
